runFormatTest(import.meta, ["markdown"], { trailingComma: "all" });
